--- a/style.css
+++ b/style.css
@@ -2,49 +2,48 @@ html {
     text-align: center;
 }
 
-.weekheading {
+h1 {
     text-decoration-line: underline;
     text-decoration-thickness: 3px;
 }
 
-.firstbox {
-    width: 320px;
-    height: 320px;
-    background-color: red;
+.topboxes div {
+    height:190px;
+}
+
+.box1 {
+    background: red;
     border: 2px solid black;
-    margin: 10px 40px;
     
 }
 
-.horizontal_dashed_line {
-    width: 320px;
-    height: 320px;
-    background-color: blue;
-    border: 10px dashed yellow;
-    border-width: 4px;
-    margin: 10px 40px;
+.box2 {
+    background: blue;
+    border: 2px dashed yellow;
+    margin: 0px 60px;
     
 }
 
-.thirdbox {
-    width: 320px;
-    height: 320px;
-    background-color: green;
-    border: 2px solid red;
-    margin: 10px 40px;
-    
+.box3 {
+    background: green;
+    border: 2px solid purple;
 }
 
-h3 {
-    color: blue;
-    display: grid;
-    margin: 40px;
-    text-align: center;
-    text-decoration-line: underline;
-    text-decoration-thickness: 1px;
+.changebtn {
+    background: #c5c5c5;
+    padding: 5px 10px;
+    margin-right: 5px;
+    width: 100%;
+    display: inline-block;
+
 }
 
-.firstbtn {
+.noleftpadding {
+    padding-left: 0;
+
+}
+
+.norightpadding {
     width: 10px;
     height: 30px;
     display: block;
@@ -53,31 +52,9 @@ h3 {
     margin: 10px, 10px, 10px;
 }
 
-.secondbtn {
-    width: 10px;
-    height: 30px;
-    display: block;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin: 10px, 10px, 10px;
-}
-
-.thirdbtn {
-    width: 10px;
-    height: 30px;
-    display: block;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin: 10px, 10px, 10px;
-}
-
-.fourthbtn {
-    width: 10px;
-    height: 30px;
-    display: block;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin: 10px, 10px, 10px;
+.newbox1 {
+    background: yellow;
+    border: 2px dotted pink;
 }
 
 h4 {
