--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@ html {
     text-align: center;
 }
 
-.p {
+.container.title {
     font: 18;
-    margin: 50px 0px;
+    margin-top: 50px 0px;
 }
 
-h1 {
+.h1 {
     text-decoration-line: underline;
     font-weight: 100;
     padding: 50px 0px;
    
 }
 
-h3 {
+.changelink {
     color: blue;
     text-decoration-line: underline;
 }
@@ -63,7 +63,7 @@ h3 {
 
 }
 
-.h5 { 
+.hidelink { 
     color: blue;
     text-decoration-line: underline;
 }
