working hide and change links

--- a/style.css
+++ b/style.css
@@ -101,3 +101,13 @@ html {
     background:#FFFFFF;
     border: 2px solid #FFFFFF;
 }
+
+.newchangelink {
+    background:#368200;
+    border: 2px solid #4C0082;
+}
+
+.newhidelink {
+    background:#FFFFFF;
+    border: 2px solid #FFFFFF;
+}
